--- a/Connect Four/MainWindow.xaml
+++ b/Connect Four/MainWindow.xaml
@@ -7,6 +7,6 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <local:GameGrid HorizontalAlignment="Center" VerticalAlignment="Center" Width="500" Height="100" GridWidth="3" GridHeight="6" Background="AliceBlue"/>
     </Grid>
 </Window>
