--- a/Connect Four/SaveView.xaml
+++ b/Connect Four/SaveView.xaml
@@ -4,8 +4,6 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Connect_Four"
-      mc:Ignorable="d" 
-      d:DesignHeight="80" d:DesignWidth="120" Background="Gray">
-    <Button Name="BtnLoad" Content="Load" HorizontalAlignment="Left" Margin="0,49,0,0" VerticalAlignment="Top" Width="120" Height="31" RenderTransformOrigin="0.5,0.5" Click="BtnLoad_Click"/>
-    <TextBlock Name="TxtName" TextWrapping="Wrap" Text="Unknown" Height="44" Width="120" VerticalAlignment="Top" HorizontalAlignment="Left"/>
+      mc:Ignorable="d" d:DesignWidth="120" Background="Gray" Height="35">
+    <Button Name="BtnLoad" Content="Load" HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" Height="35" RenderTransformOrigin="0.5,0.5" Click="BtnLoad_Click"/>
 </Grid>
