--- a/Connect Four/ConnectGame.xaml
+++ b/Connect Four/ConnectGame.xaml
@@ -9,9 +9,7 @@
       Width="800" Height="450">
     <WrapPanel Name="ConnectionList" Height="413" VerticalAlignment="Top" Background="Aqua"/>
     <Button Name="BtnReload" Content="Reload" HorizontalAlignment="Left" Margin="7,423,0,0" VerticalAlignment="Top" Width="75" Click="BtnReload_Click"/>
-    <TextBox x:Name="NameBox" HorizontalAlignment="Left" Height="23" Margin="100,420,0,0" TextWrapping="Wrap" Text="Unknown" VerticalAlignment="Top" Width="120"/>
+    <TextBox x:Name="NameBox" HorizontalAlignment="Left" Height="23" Margin="170,420,0,0" TextWrapping="Wrap" Text="Unknown" VerticalAlignment="Top" Width="120"/>
     <Button Content="Load" HorizontalAlignment="Left" Margin="715,428,0,0" VerticalAlignment="Top" Width="75" Click="BtnLoad_Click"/>
-
-
-
+    <Label Content="Name" HorizontalAlignment="Left" Margin="127,416,0,0" VerticalAlignment="Top"/>
 </Grid>
